// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApproveTransactionHeader should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#BBC0C5",
        "borderRadius": 99,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 24,
        "paddingLeft": 8,
        "paddingRight": 16,
        "paddingVertical": 8,
      }
    }
    testID="approve_transaction_origin_pill"
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "height": 24,
          "marginRight": 8,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={Object {}}
        style={
          Object {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="favicon-avatar-image"
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        Object {
          "color": "#535A61",
          "flexShrink": 1,
          "fontFamily": "Euclid Circular B",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      http://metamask.github.io
    </Text>
  </View>
  <TouchableOpacity
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#BBC0C5",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#C7144F",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    undefined,
                  ]
                }
              >
                <RNSVGSvgView
                  bbHeight={32}
                  bbWidth={32}
                  focusable={false}
                  height={32}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 32,
                        "width": 32,
                      },
                    ]
                  }
                  width={32}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={4294711651}
                      height={32}
                      matrix={
                        Array [
                          0.46329603511986217,
                          0.8862035792312145,
                          -0.8862035792312145,
                          0.46329603511986217,
                          29.06767649409735,
                          -8.290603334655817,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={4280576225}
                      height={32}
                      matrix={
                        Array [
                          -0.5778576243835052,
                          0.8161375900801603,
                          -0.8161375900801603,
                          -0.5778576243835052,
                          51.62016714634118,
                          17.239003094412087,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={4278407261}
                      height={32}
                      matrix={
                        Array [
                          0.7046342099635947,
                          -0.7095707365365209,
                          0.7095707365365209,
                          0.7046342099635947,
                          -25.225718686778755,
                          -4.611026307883787,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badge-network"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001A",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={
                    Object {
                      "uri": "MockImage",
                    }
                  }
                  style={
                    Object {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#24272A",
                "fontFamily": "Euclid Circular B",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                Object {
                  "color": "#24272A",
                  "fontFamily": "Euclid Circular B",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`ApproveTransactionHeader should return origin to be null when not present 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#BBC0C5",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#C7144F",
                      "borderRadius": 16,
                      "height": 32,
                      "width": 32,
                    },
                    undefined,
                  ]
                }
              >
                <RNSVGSvgView
                  bbHeight={32}
                  bbWidth={32}
                  focusable={false}
                  height={32}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {
                        "flex": 0,
                        "height": 32,
                        "width": 32,
                      },
                    ]
                  }
                  width={32}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={4294711651}
                      height={32}
                      matrix={
                        Array [
                          0.46329603511986217,
                          0.8862035792312145,
                          -0.8862035792312145,
                          0.46329603511986217,
                          29.06767649409735,
                          -8.290603334655817,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={4280576225}
                      height={32}
                      matrix={
                        Array [
                          -0.5778576243835052,
                          0.8161375900801603,
                          -0.8161375900801603,
                          -0.5778576243835052,
                          51.62016714634118,
                          17.239003094412087,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                    <RNSVGRect
                      fill={4278407261}
                      height={32}
                      matrix={
                        Array [
                          0.7046342099635947,
                          -0.7095707365365209,
                          0.7095707365365209,
                          0.7046342099635947,
                          -25.225718686778755,
                          -4.611026307883787,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                      width={32}
                      x={0}
                      y={0}
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                  Object {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badge-network"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#FFFFFF",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001A",
                    "shadowOffset": Object {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={
                    Object {
                      "uri": "MockImage",
                    }
                  }
                  style={
                    Object {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              Object {
                "color": "#24272A",
                "fontFamily": "Euclid Circular B",
                "fontSize": 12,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 20,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                Object {
                  "color": "#24272A",
                  "fontFamily": "Euclid Circular B",
                  "fontSize": 14,
                  "fontWeight": "700",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            Object {
              "color": "#24272A",
              "fontFamily": "Euclid Circular B",
              "fontSize": 14,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
